--- a/views/post.ejs
+++ b/views/post.ejs
@@ -4,15 +4,31 @@
     <meta charset="UTF-8">
     <title>登录</title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <script charset="utf-8" src="/js/kindeditor/kindeditor-min.js"></script>
+    <script charset="utf-8" src="/js/kindeditor/lang/zh_CN.js"></script>
+    <script>
+        var editor;
+        KindEditor.ready(function(K) {
+            editor = K.create('textarea', {
+                width:300,
+                height:200,
+                allowImageUpload : true,
+                uploadJson:'/post/img',
+                items : [
+                    'fontname', 'fontsize', '|', 'forecolor', 'hilitecolor', 'bold', 'italic',
+                    'underline', 'removeformat', '|', 'justifyleft', 'justifycenter', 'justifyright',
+                    'insertorderedlist', 'insertunorderedlist', '|', 'emoticons', 'image', 'link']
+            });
+        });
+    </script>
 </head>
 <body>
 <div id="main">
     <% include top %>
-    <p>我是发表文章界面</p>
 
     <form class="login_form" method="post">
         <div>标题：<input id="title" type="text" name="title"></div>
-        <div>内容：<input type="content" id="content" name="content"></div>
+        <div>内容：<textarea type="content" id="content" name="content"></textarea></div>
 
         <div>
             <button type="submit">提交</button>
@@ -26,7 +42,6 @@
         <% } %>
     </form>
     <% include bottom %>
-
 </div>
 </body>
 </html>
