--- a/views/users.ejs
+++ b/views/users.ejs
@@ -6,6 +6,17 @@
     <link rel='stylesheet' href='/stylesheets/style.css'/>
 </head>
 <body>
-<p>我是<%= username %></p>
+<div id="main">
+<%- include top %>
+<% posts.forEach(function (post, index) { %>
+<p><h2><a href="/users/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></h2></p>
+<p class="info">
+    作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
+    日期：<%= post.time.minute %>
+</p>
+<p><%- post.post %></p>
+<% }) %>
+<%- include bottom %>
+    </div>
 </body>
 </html>
