--- a/views/article.ejs
+++ b/views/article.ejs
@@ -4,19 +4,36 @@
     <meta charset="UTF-8">
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <script>
+        function delcfm(){
+            if (!confirm("确认要删除？")) {
+                window.event.returnValue = false;
+            }
+        }
+    </script>
 </head>
 <body>
 <div id="main">
     <% include top %>
     <div id="content">
+        <% if (user && (user.name == post.name)) { %>
+        <span><a class="edit" href="/edit/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">编辑</a></span>
+        <span><form action="/remove/<%= post.name %>/<%= post.time.day %>/<%= post.title %>" target="_blank" method="get">
+                <input name="" type="submit" value="删除" onClick="delcfm()" /></form></span>
+        <% } %>
         <p class="info">
             作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
             日期：<%= post.time.minute %>
         </p>
         <p><%- post.post %></p>
-
+        <%- include comment %>
     </div>
-
+    <% if (success) { %>
+    <div><%= success %></div>
+    <% } %>
+    <% if (error) { %>
+    <div><%= error %> </div>
+    <% } %>
     <% include bottom %>
 </div>
 </body>
