--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
         <p><%- post.post %></p>
         <% }) %>
     </div>
-
+  <% include pageing%>
     <% include bottom %>
 </div>
 </body>
