--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,15 +16,16 @@
         <div><%= error %> </div>
         <% } %>
         <% posts.forEach(function (post, index) { %>
-        <p>
+        <div style="border: 1px solid black;margin-bottom: 10px">
 
         <h2><a href="/users/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></h2></p>
         <p class="info">
             作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
             日期：<%= post.time.minute %>
-        </p>
+
 
         <p><%- post.post %></p>
+        </div>
         <% }) %>
     </div>
   <% include pageing%>
