--- a/views/users.ejs
+++ b/views/users.ejs
@@ -9,12 +9,14 @@
 <div id="main">
 <%- include top %>
 <% posts.forEach(function (post, index) { %>
+    <div style="border: 1px solid black;margin-bottom: 10px">
 <p><h2><a href="/users/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></h2></p>
 <p class="info">
     作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
     日期：<%= post.time.minute %>
 </p>
 <p><%- post.post %></p>
+        </div>
 <% }) %>
     <% include pageing.ejs%>
 <%- include bottom %>
