--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -26,7 +26,7 @@
 
 <div id="main">
     <% include top%>
-<form method="post">
+    <form method="post" action="/edit/<%= post._id %>">
     标题：<br />
     <input type="text" name="title" value="<%= post.title %>" disabled="disabled" /><br />
     正文：<br />
