2015/9/26 增加search功能，消除id查询bug

--- a/views/top.ejs
+++ b/views/top.ejs
@@ -5,4 +5,5 @@
     <% }else { %>
     <a href="/login">登录</a><a href="/reg">注册</a>
     <% } %>
+    <div style="float:right;margin-top: 30px"><form action="/search" method="GET"><input type="text" name="keyword" placeholder="SEARCH" class="search" /></form></div>
 </div>
