--- a/views/article.ejs
+++ b/views/article.ejs
@@ -24,7 +24,8 @@
         <p class="info">
             <%= post.title %><br>
             作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
-            日期：<%= post.time.minute %>
+            日期：<%= post.time.minute %>|
+            点击量：<%= post.pv?post.pv:"0" %>
         </p>
         <p><%- post.post %></p>
         <%- include comment %>
