--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,8 @@
             <h2><a href="/users/p/<%= post._id %>"><%= post.title %></a></h2></p>
         <p class="info">
             作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
-            日期：<%= post.time.minute %>
+            日期：<%= post.time.minute %>|
+            点击量：<%= post.pv?post.pv:"0" %>
 
 
         <p><%- post.post %></p>
