--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,17 +19,22 @@
         <div style="border: 1px solid black;margin-bottom: 10px">
 
             <h2><a href="/users/p/<%= post._id %>"><%= post.title %></a></h2></p>
-        <p class="info">
-            作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
-            日期：<%= post.time.minute %>|
-            点击量：<%= post.pv?post.pv:"0" %>
+            <p class="info">
+                作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
+                日期：<%= post.time.minute %>|
+                点击量：<%= post.pv ? post.pv : "0" %>|转载：
+                <% if (post.reprint_info.reprint_to) { %>
+                <%= post.reprint_info.reprint_to.length %>
+                <% } else { %>
+                <%= 0 %>
+                <% } %>
 
 
-        <p><%- post.post %></p>
+            <p><%- post.post %></p>
         </div>
         <% }) %>
     </div>
-  <% include pageing%>
+    <% include pageing %>
     <% include bottom %>
 </div>
 </body>
