--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <title>登录</title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div id="main">
-    <% include top %>
-    <p>我是登录界面</p>
 
-    <form class="login_form" method="post">
-        <div>用户名：<input id="username" type="text" name="username"></div>
-        <div>密码：<input type="password" id="password" name="password"></div>
+<% include top %>
+
+<div class="container">
+    <form class="login_form form-horizontal" role="form" method="post">
+        <div class="form-group"><label for="username" class="col-sm-2 control-label">用户名：</label>
+
+            <div class="col-sm-5"><input class="form-control" id="username" type="text" name="username"></div>
+        </div>
+        <div class="form-group"><label for="password" class="col-sm-2 control-label">密码：</label> <div class="col-sm-5"><input class="form-control" type="password" id="password" name="password"></div></div>
 
         <div>
             <button type="submit">登录</button>
@@ -25,8 +31,9 @@
         <div><%= error %> </div>
         <% } %>
     </form>
-    <% include bottom %>
-
+    </div>
 </div>
+<% include bottom %>
+
 </body>
 </html>
