--- a/views/top.ejs
+++ b/views/top.ejs
@@ -1,4 +1,4 @@
-<div id="top"><img src="/images/icon.png">
+<div id="top" class="container"><img src="/images/icon.png">
     <a href="/">首页</a>
     <% if(user){ %>
     <a href="/post">发表</a><a href="/logout">登出</a>
