--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,16 +13,23 @@
 <% include top %>
 
 <div class="container">
-    <form class="login_form form-horizontal" role="form" method="post">
-        <div class="form-group"><label for="username" class="col-sm-2 control-label">用户名：</label>
+    <form style="width: 500px;margin-top: 100px;padding: 50px 50px"
+          class="login_form form-horizontal  table-bordered center-block" role="form" method="post">
+        <div class="form-group"><label style="font-size: 15px" for="username"
+                                       class="col-lg-3 control-label">用户名：</label>
 
-            <div class="col-sm-5"><input class="form-control" id="username" type="text" name="username"></div>
+            <div class="col-lg-9"><input class="form-control" id="username" type="text" name="username"></div>
         </div>
-        <div class="form-group"><label for="password" class="col-sm-2 control-label">密码：</label> <div class="col-sm-5"><input class="form-control" type="password" id="password" name="password"></div></div>
+        <div class="form-group"><label for="password" style="font-size:15px" class="col-lg-3 control-label">密码：</label>
 
-        <div>
-            <button type="submit">登录</button>
-            <button type="reset">重置</button>
+            <div class="col-lg-9"><input class="form-control" type="password" id="password" name="password"></div>
+        </div>
+
+        <div style="width: 200px;height: 40px" class="center-block ">
+
+            <button class="btn btn-primary pull-left" type="submit">登录</button>
+            <button class="btn btn-primary pull-right" type="reset">重置</button>
+
         </div>
         <% if (success) { %>
         <div><%= success %></div>
@@ -31,7 +38,7 @@
         <div><%= error %> </div>
         <% } %>
     </form>
-    </div>
+
 </div>
 <% include bottom %>
 
