--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,16 +13,16 @@
 <% include top %>
 
 <div class="container">
-    <form style="width: 500px;margin-top: 100px;padding: 50px 50px"
+    <form style="width: 400px;margin-top: 100px;padding: 50px 50px"
           class="login_form form-horizontal  table-bordered center-block" role="form" method="post">
-        <div class="form-group"><label style="font-size: 15px" for="username"
-                                       class="col-lg-3 control-label">用户名：</label>
+        <div class="form-group">
 
-            <div class="col-lg-9"><input class="form-control" id="username" type="text" name="username"></div>
+            <div class="input-group "><span class="input-group-addon">用户名</span><input class="form-control" id="username"
+                                                                                      type="text" name="username"></div>
         </div>
-        <div class="form-group"><label for="password" style="font-size:15px" class="col-lg-3 control-label">密码：</label>
+        <div class="form-group">
 
-            <div class="col-lg-9"><input class="form-control" type="password" id="password" name="password"></div>
+            <div class="input-group"><span class="input-group-addon">密&nbsp&nbsp&nbsp&nbsp码</span><input class="form-control" type="password" id="password" name="password"></div>
         </div>
 
         <div style="width: 200px;height: 40px" class="center-block ">
