--- a/views/article.ejs
+++ b/views/article.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
+    <script  src="/js/jquery-2.1.4.min.js"> </script>
+    <script  src="/js/bootstrap3/js/bootstrap.min.js"> </script>
     <script>
         function delcfm(){
             if (!confirm("确认要删除？")) {
@@ -41,7 +44,7 @@
         <% } %>
         <p class="info">
             <%= post.title %><br>
-            作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
+           <span class="label label-info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a></span>  |
             日期：<%= post.time.minute %>|
             点击量：<%= post.pv?post.pv:"0" %>|
             转载：
