--- a/views/top.ejs
+++ b/views/top.ejs
@@ -6,6 +6,6 @@
     <% }else { %>
     <a href="/login">登录</a><a href="/reg">注册</a>
     <% } %>
-    <form class="pull-right" action="/search" method="GET"><input type="text" name="keyword" placeholder="SEARCH"
+    <form style="display: inline-block" class="pull-right" action="/search" method="GET"><input type="text" name="keyword" placeholder="SEARCH"
                                                                   class="search"/></form>
 </div>
