--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-<div id="main">
+<div class="container">
     <% include top%>
     <form method="post" action="/edit/<%= post._id %>">
     标题：<br />
