--- a/views/users.ejs
+++ b/views/users.ejs
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css'/>
 </head>
 <body>
-<div id="main">
+<div class="container">
 <%- include top %>
 <% posts.forEach(function (post, index) { %>
     <div style="border: 1px solid black;margin-bottom: 10px">
