--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,13 +8,32 @@
     <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="background: url('/images/lg_bg.jpg' ) no-repeat; ">
 
-<% include top %>
+
 
 <div class="container">
-    <form style="width: 400px;margin-top: 100px;padding: 50px 50px"
-          class="login_form form-horizontal  table-bordered center-block" role="form" method="post">
+
+    <% if (success) { %>
+    <div class="alert alert-success alert-dismissable" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true">
+            </span>
+        </button>
+        <%= success %></div>
+
+    <% } %>
+    <% if (error) { %>
+    <div class="alert alert-danger alert-dismissable" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true">
+            </span>
+        </button>
+        <%= error %></div>
+    <% } %>
+    <form style="width: 350px;padding: 20px 50px;position: absolute; top: 170px;"
+          class="login_form form-horizontal  table-bordered btn btn-default pull-left" role="form" method="post">
+        <div class="form-group btn-lg text-center">用户登录</div>
         <div class="form-group">
 
             <div class="input-group "><span class="input-group-addon">用户名</span><input class="form-control" id="username"
@@ -28,19 +47,14 @@
         <div style="width: 200px;height: 40px" class="center-block ">
 
             <button class="btn btn-primary pull-left" type="submit">登录</button>
-            <button class="btn btn-primary pull-right" type="reset">重置</button>
+            <a class="btn btn-primary pull-right " href="/reg">注册</a>
 
         </div>
-        <% if (success) { %>
-        <div><%= success %></div>
-        <% } %>
-        <% if (error) { %>
-        <div><%= error %> </div>
-        <% } %>
+
     </form>
 
 </div>
-<% include bottom %>
+
 
 </body>
 </html>
