--- a/views/post.ejs
+++ b/views/post.ejs
@@ -6,6 +6,9 @@
     <link rel='stylesheet' href='/stylesheets/style.css'/>
     <script charset="utf-8" src="/js/kindeditor/kindeditor-min.js"></script>
     <script charset="utf-8" src="/js/kindeditor/lang/zh_CN.js"></script>
+    <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
     <script>
         var editor;
         KindEditor.ready(function(K) {
@@ -23,7 +26,7 @@
     </script>
 </head>
 <body>
-<div id="main">
+<div class="container">
     <% include top %>
 
     <form class="login_form" method="post">
