--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -4,27 +4,49 @@
     <meta charset="UTF-8">
     <title>注册</title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div id="main">
+<div class="container">
+
     <% include top %>
-    <div id="content">
-        <form class="reg_form" method="post">
-            <div>用户名：<input id="username" type="text" name="username"></div>
-            <div>密码：<input type="password" id="password" name="password"></div>
-            <div>重复密码：<input type="password" id="rpassword" name="rpassword"></div>
-            <div>
-                <button type="submit">提交</button>
-                <button type="reset">重置</button>
+    <% if (success) { %>
+    <div class="alert alert-success"><%= success %></div>
+    <% } %>
+    <% if (error) { %>
+    <div class="alert alert-danger"><%= error %> </div>
+    <% } %>
+    <form style="width: 400px;margin-top: 100px;padding: 50px 50px"
+          class="login_form form-horizontal  table-bordered center-block" role="form" method="post">
+        <div class="form-group">
+
+            <div class="input-group "><span class="input-group-addon">用户名</span><input class="form-control"
+                                                                                       id="username"
+                                                                                       type="text" name="username">
             </div>
-            <% if (success) { %>
-            <div><%= success %></div>
-            <% } %>
-            <% if (error) { %>
-            <div><%= error %> </div>
-            <% } %>
-        </form>
-    </div>
+        </div>
+        <div class="form-group">
+
+            <div class="input-group"><span class="input-group-addon">密&nbsp&nbsp&nbsp&nbsp码</span><input
+                        class="form-control" type="password" id="password" name="password"></div>
+        </div>
+        <div class="form-group">
+
+            <div class="input-group"><span class="input-group-addon">确认密码</span><input class="form-control"
+                                                                                       type="rpassword" id="rpassword"
+                                                                                       name="rpassword"></div>
+        </div>
+
+        <div style="width: 200px;height: 40px" class="center-block ">
+
+            <button class="btn btn-primary pull-left" type="submit">注册</button>
+            <button class="btn btn-primary pull-right" type="reset">重置</button>
+
+        </div>
+
+    </form>
     <% include bottom %>
 </div>
 </body>
