--- a/views/search.ejs
+++ b/views/search.ejs
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title><%=title%></title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div id="main">
+<div class="container">
     <% include top %>
     <div id="content">
         <ul class="archive">
