--- a/views/pageing.ejs
+++ b/views/pageing.ejs
@@ -7,5 +7,5 @@
     <% if (!isLastPage) { %>
     <li class="nextpage"><a title="下一页" href="?p=<%= page+1 %>">下一页</a></li>
     <% } %>
-    <li class="pagetotal">共<%= total %>页</li>
+    <li class="pagetotal"><span>共<%= total %>页</span></li>
 </div>
