--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -1,5 +1,5 @@
 
-<div class="ds-thread" data-thread-key="<%=post._id%>" data-title="<%=post.title%>" data-url="/user/p/<%=post._id%>"></div>
+<div style="background-color: white" class="ds-thread" data-thread-key="<%=post._id%>" data-title="<%=post.title%>" data-url="/user/p/<%=post._id%>"></div>
 
 <script type="text/javascript">
     var duoshuoQuery = {short_name:"stoneshijin"};
