--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
     <script charset="utf-8" src="/js/kindeditor/kindeditor-min.js"></script>
     <script charset="utf-8" src="/js/kindeditor/lang/zh_CN.js"></script>
     <script>
@@ -22,7 +25,7 @@
         });
         </script>
 </head>
-<body>
+<body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
 
 <div class="container">
     <% include top%>
