--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,27 +6,39 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
     <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
-    <script  src="/js/jquery-2.1.4.min.js"> </script>
-    <script  src="/js/bootstrap3/js/bootstrap.min.js"> </script>
-
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
+    <script charset="utf-8" src="/js/kindeditor/kindeditor-min.js"></script>
+    <script charset="utf-8" src="/js/kindeditor/lang/zh_CN.js"></script>
+    <script>
+        var editor;
+        KindEditor.ready(function(K) {
+            editor = K.create('textarea', {
+                width:'560px',
+                height:200,
+                minWidth:560,
+                maxWidth:560,
+                allowImageUpload : true,
+                uploadJson:'/post/img',
+                items : [
+                    'fontname', 'fontsize', '|', 'forecolor', 'hilitecolor', 'bold', 'italic',
+                    'underline', 'removeformat', '|', 'justifyleft', 'justifycenter', 'justifyright',
+                    'insertorderedlist', 'insertunorderedlist', '|', 'emoticons', 'image', 'link']
+            });
+        });
+    </script>
 </head>
-<body>
+<body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
+<% include top %>
 <div class="container">
-    <% include top %>
-    <% if (success) { %>
-    <div class="alert alert-success"><%= success %></div>
-    <% } %>
-    <% if (error) { %>
-    <div class="alert alert-danger"><%= error %> </div>
-    <% } %>
+    <% include prompt.ejs%>
         <div class="row">
             <% if(posts) %>
         <% posts.forEach(function (post, index) { %>
-        <div class="col-md-12 col-sm-12 table-bordered" style="padding:20px;">
+        <div class="panel  panel-default col-md-12 col-sm-12 table-bordered" style="padding:10px 0px 0px 0px;margin-bottom: 30px;max-height: 200px;overflow: hidden">
 
-          <a class="h2 label label-default" href="/users/p/<%= post._id %>"><%= post.title %></a>
-            <p class="info">
-               <span class="label label-info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a>  |
+          <div class="panel-heading"><a class="h3 panel-title " href="/users/p/<%= post._id %>"><%= post.title %></a>
+               <div class="label label-info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a>  |
                 日期：<%= post.time.minute %> |
                 点击量：<%= post.pv ? post.pv : "0" %> | 转载：
                 <% if (post.reprint_info.reprint_to) { %>
@@ -34,9 +46,42 @@
                 <% } else { %>
                 <%= 0 %>
                 <% } %>
-               </span>
+               </div>
+          </div>
+         <div class="panel-body"><%- post.post %></div>
+            <div class="panel-footer clearfix">
 
-            <p style=""><%- post.post %></p>
+                <form action="/remove" target="_blank" method="post">
+                    <div class="btn-group pull-right ">
+                        <% if (user && (user.name == post.name)) { %>
+                        <a class="edit btn btn-primary btn-sm" href="/edit/<%= post._id %>">编辑</a>
+                        <input type="hidden" name="id" value="<%= post._id %>">
+                        <input class=" btn btn-primary btn-sm" name="" type="submit" value="删除" onClick="delcfm()">
+
+                        <% } %>
+                        <% var flag = 1 %>
+                        <% if (user && (user.name != post.name)) { %>
+                        <% if ((post.reprint_info.reprint_from != undefined) && (user.name == post.reprint_info.reprint_from.name)) { %>
+                        <% flag = 0 %>
+                        <% } %>
+                        <% if ((post.reprint_info.reprint_to != undefined)) { %>
+                        <% post.reprint_info.reprint_to.forEach(function (reprint_to, index) { %>
+                        <% if (user.name == reprint_to.name) { %>
+                        <% flag = 0 %>
+                        <% } %>
+                        <% }) %>
+                        <% } %>
+                        <% } else { %>
+                        <% flag = 0 %>
+                        <% } %>
+                        <% if (1) { %>
+                        <a class="edit btn btn-primary btn-sm" href="/reprint/<%= post._id %>">转载</a>
+                        <% } %>
+                    </div>
+                </form>
+
+
+            </div>
         </div>
         <% }) %>
         </div>
