--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,28 +9,8 @@
     <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
 </head>
 <body style="background: url('/images/lg_bg.jpg' ) no-repeat; ">
-
-
-
 <div class="container">
-
-    <% if (success) { %>
-    <div class="alert alert-success alert-dismissable" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span class="glyphicon glyphicon-remove" aria-hidden="true">
-            </span>
-        </button>
-        <%= success %></div>
-
-    <% } %>
-    <% if (error) { %>
-    <div class="alert alert-danger alert-dismissable" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span class="glyphicon glyphicon-remove" aria-hidden="true">
-            </span>
-        </button>
-        <%= error %></div>
-    <% } %>
+<% include prompt.ejs%>
     <form style="width: 350px;padding: 20px 50px;position: absolute; top: 170px;"
           class="login_form form-horizontal  table-bordered btn btn-default pull-left" role="form" method="post">
         <div class="form-group btn-lg text-center">用户登录</div>
