--- a/views/search.ejs
+++ b/views/search.ejs
@@ -8,22 +8,21 @@
     <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
+<%include top.ejs %>
 <div class="container">
-    <% include top %>
-    <div id="content">
-        <ul class="archive">
-            <% var lastYear = 0 %>
-            <% posts.forEach(function (post, index) { %>
-            <% if(lastYear != post.time.year) { %>
-            <li><h3><%= post.time.year %></h3></li>
-            <% lastYear = post.time.year } %>
-            <li><time><%= post.time.day %></time></li>
-            <li><a href="/users/p/<%= post._id %>"><%= post.title %></a></li>
-            <% }) %>
-        </ul>
+    <% include prompt.ejs%>
+    <div class="row">
+        <% if(posts) %>
+        <% posts.forEach(function (post, index) { %>
+        <div class="panel  panel-default col-md-12 col-sm-12 table-bordered" style="padding:10px 0px 0px 0px;margin-bottom: 30px;max-height: 200px;overflow: hidden">
+            <div class="panel-heading"><a class="h3 panel-title " href="/users/p/<%= post._id %>"><%= post.title %></a>
+                <div class="label label-info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a>  |
+                    日期：<%= post.time.minute %>
+                </div>
+            </div>
+        <% }) %>
     </div>
-    <% include bottom %>
 </div>
 </body>
 </html>
