--- a/views/top.ejs
+++ b/views/top.ejs
@@ -1,29 +1,71 @@
-<nav class="navbar navbar-default nav-justified navbar-inverse" role="navigation">
 
-    <ul class="nav navbar-nav " style="width: 100%">
-        <li><img class="img-rounded img-responsive" src="/images/icon.png"></li>
-        <li id="index"><a href="/">首页</a></li>
-    <% if(user){ %>
 
-        <li id="post"><a href="/post">发表</a></li>
-        <li><a href="/logout">登出</a></li>
-        <li id="filemanage"><a href="/filemanage">文件管理</a></li>
+<nav class="navbar navbar-default nav-justified " role="navigation" style="padding: 0px 100px;border-radius: 0px">
+    <div style="width: 100px" class="pull-left"><img class="img-rounded img-responsive" src="/images/icon.png"></div>
+    <form class="navbar-form pull-left" role="search" action="/search" method="GET">
+        <div class="input-group">
+            <input style="width: 500px;" type="text" name="keyword" placeholder="SEARCH" class="form-control input-sm"
+                   placeholder="Search"/>
+               <span class="input-group-btn">
+                   <button type="submit" class="btn btn-default btn-sm">Go</button>
+                   </span>
+        </div>
 
+    </form>
+    <ul class="nav navbar-nav pull-left " style="margin-left: 100px;">
+
+        <li class="" id="index"><a href="/"><span class="glyphicon glyphicon-home"></span> 首页</a></li>
+        <% if(user){ %>
+        <li class=""><a href="/users/<%= user.name %>"><span class="glyphicon glyphicon-user"></span> <%= user.name %>
+            </a></li>
+        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <span style="border-left: solid 1px black;padding-left:20px " class="glyphicon glyphicon-cog"></span>
+                设置</a>
+            <ul class="dropdown-menu">
+                <li><a href="#">账号设置</a></li>
+                <li class="" id="filemanage"><a href="/filemanage"> 文件管理</a></li>
+                <li class="divider"></li>
+                <li><a href="/logout">退出</a></li>
+            </ul>
+        </li>
+        <li class="" id="post">
+            <a href="#" data-toggle="modal" data-target="#myModal">
+                <span class="glyphicon glyphicon-edit"></span> 发表</a>
+        </li>
         <% }else { %>
-
         <li id="login"><a href="/login">登录</a></li>
         <li id="reg"><a href="/reg">注册</a></li>
-
         <% } %>
         <script type="text/javascript">
             $('ul.nav > li').removeClass('active');
             $('#' + '<%=type%>').addClass('active');
         </script>
-        <form class="navbar-form pull-right" role="search" action="/search" method="GET">
-            <div class="form-group">
-                <input type="text" name="keyword" placeholder="SEARCH" class="form-control" placeholder="Search"/>
-            </div>
-            <button type="submit" class="btn btn-default">提交</button>
-        </form>
     </ul>
 </nav>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close"
+                        data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="myModalLabel">
+                   发表
+                </h4>
+            </div>
+            <form action="/post" class="login_form" method="post">
+            <div class="modal-body">
+                    <div>标题：<input id="title" type="text" name="title"></div>
+                    <div>内容：<textarea style="resize: none" type="content" id="content" name="content"></textarea></div>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">提交</button>
+                <button type="reset" class="btn btn-primary">重置</button>
+            </div>
+            </form>
+        </div>
+    </div>
+</div>
+
