--- a/views/users.ejs
+++ b/views/users.ejs
@@ -2,33 +2,78 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title><%=title%></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
-</head>
-<body>
-<div class="container">
-<%- include top %>
-<% posts.forEach(function (post, index) { %>
-    <div style="border: 1px solid black;margin-bottom: 10px">
-        <p>
+    <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
+    <script  src="/js/jquery-2.1.4.min.js"> </script>
+    <script  src="/js/bootstrap3/js/bootstrap.min.js"> </script>
 
-        <h2><a href="/users/p/<%= post._id %>"><%= post.title %></a></h2></p>
-<p class="info">
-    作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
-    日期：<%= post.time.minute %>|
-    点击量：<%= post.pv?post.pv:"0" %>|
-    转载：
-    <% if (post.reprint_info.reprint_to) { %>
-    <%= post.reprint_info.reprint_to.length %>
-    <% } else { %>
-    <%= 0 %>
-    <% } %>
-</p>
-<p><%- post.post %></p>
+</head>
+<body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
+<% include top.ejs%>
+<div class="container">
+
+    <% include prompt.ejs%>
+    <div class="row">
+        <% if(posts) %>
+        <% posts.forEach(function (post, index) { %>
+        <div class="panel  panel-default col-md-12 col-sm-12 table-bordered" style="padding:10px 0px 0px 0px;margin-bottom: 30px;max-height: 200px;overflow: hidden">
+
+            <div class="panel-heading"><a class="h3 panel-title " href="/users/p/<%= post._id %>"><%= post.title %></a>
+                <div class="label label-info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a>  |
+                    日期：<%= post.time.minute %> |
+                    点击量：<%= post.pv ? post.pv : "0" %> | 转载：
+                    <% if (post.reprint_info.reprint_to) { %>
+                    <%= post.reprint_info.reprint_to.length %>
+                    <% } else { %>
+                    <%= 0 %>
+                    <% } %>
+                </div>
+            </div>
+            <div class="panel-body"><%- post.post %></div>
+            <div class="panel-footer clearfix">
+
+                <form action="/remove" target="_blank" method="post">
+                    <div class="btn-group pull-right ">
+                        <% if (user && (user.name == post.name)) { %>
+                        <a class="edit btn btn-primary btn-sm" href="/edit/<%= post._id %>">编辑</a>
+                        <input type="hidden" name="id" value="<%= post._id %>">
+                        <input class=" btn btn-primary btn-sm" name="" type="submit" value="删除" onClick="delcfm()">
+
+                        <% } %>
+                        <% var flag = 1 %>
+                        <% if (user && (user.name != post.name)) { %>
+                        <% if ((post.reprint_info.reprint_from != undefined) && (user.name == post.reprint_info.reprint_from.name)) { %>
+                        <% flag = 0 %>
+                        <% } %>
+                        <% if ((post.reprint_info.reprint_to != undefined)) { %>
+                        <% post.reprint_info.reprint_to.forEach(function (reprint_to, index) { %>
+                        <% if (user.name == reprint_to.name) { %>
+                        <% flag = 0 %>
+                        <% } %>
+                        <% }) %>
+                        <% } %>
+                        <% } else { %>
+                        <% flag = 0 %>
+                        <% } %>
+                        <% if (1) { %>
+                        <a class="edit btn btn-primary btn-sm" href="/reprint/<%= post._id %>">转载</a>
+                        <% } %>
+                    </div>
+                </form>
+
+
+            </div>
         </div>
-<% }) %>
-    <% include pageing.ejs%>
-<%- include bottom %>
+        <% }) %>
     </div>
+
+    <% include pageing %>
+    <% include bottom %>
+</div>
 </body>
 </html>
+
+
+
