--- a/views/users.ejs
+++ b/views/users.ejs
@@ -57,7 +57,7 @@
                         <% } else { %>
                         <% flag = 0 %>
                         <% } %>
-                        <% if (1) { %>
+                        <% if (flag) { %>
                         <a class="edit btn btn-primary btn-sm" href="/reprint/<%= post._id %>">转载</a>
                         <% } %>
                     </div>
