2015/10/20  增加关注，个人页面展示

--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -28,7 +28,7 @@
         <div class="form-group">
 
             <div class="input-group"><span class="input-group-addon">确认密码</span><input class="form-control"
-                                                                                       type="rpassword" id="rpassword"
+                                                                                       type="password" id="rpassword"
                                                                                        name="rpassword"></div>
         </div>
 
