--- a/views/users.ejs
+++ b/views/users.ejs
@@ -6,75 +6,100 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
     <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
-    <script  src="/js/jquery-2.1.4.min.js"> </script>
-    <script  src="/js/bootstrap3/js/bootstrap.min.js"> </script>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
 
 </head>
 <body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
-<% include top.ejs%>
+<% include top.ejs %>
 <div class="container">
 
-    <% include prompt.ejs%>
+    <% include prompt.ejs %>
     <div class="row">
-        <div class="col-md-8 col-sm-8">
-        <% if(posts) %>
-        <% posts.forEach(function (post, index) { %>
-        <div class="panel  panel-default col-md-12 col-sm-12 table-bordered" style="padding:10px 0px 0px 0px;margin-bottom: 30px;max-height: 200px;overflow: hidden">
+        <div id="user_left" class="col-md-8 col-sm-8">
+            <% if(posts) %>
+            <% posts.forEach(function (post, index) { %>
+            <div class="panel  panel-default col-md-12 col-sm-12 table-bordered"
+                 style="padding:10px 0px 0px 0px;margin-bottom: 30px;max-height: 200px;overflow: hidden">
 
-            <div class="panel-heading"><a class="h3 panel-title " href="/users/p/<%= post._id %>"><%= post.title %></a>
-                <div class="label label-info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a>  |
-                    日期：<%= post.time.minute %> |
-                    点击量：<%= post.pv ? post.pv : "0" %> | 转载：
-                    <% if (post.reprint_info.reprint_to) { %>
-                    <%= post.reprint_info.reprint_to.length %>
-                    <% } else { %>
-                    <%= 0 %>
-                    <% } %>
-                </div>
-            </div>
-            <div class="panel-body"><%- post.post %></div>
-            <div class="panel-footer clearfix">
+                <div class="panel-heading clearfix"><a class="h3 panel-title pull-left "
+                                                       href="/users/p/<%= post._id %>"><%= post.title %></a>
 
-                <form action="/remove" target="_blank" method="post">
-                    <div class="btn-group pull-right ">
-                        <% if (user && (user.name == post.name)) { %>
-                        <a class="edit btn btn-primary btn-sm" href="/edit/<%= post._id %>">编辑</a>
-                        <input type="hidden" name="id" value="<%= post._id %>">
-                        <input class=" btn btn-primary btn-sm" name="" type="submit" value="删除" onClick="delcfm()">
-
-                        <% } %>
-                        <% var flag = 1 %>
-                        <% if (user && (user.name != post.name)) { %>
-                        <% if ((post.reprint_info.reprint_from != undefined) && (user.name == post.reprint_info.reprint_from.name)) { %>
-                        <% flag = 0 %>
-                        <% } %>
-                        <% if ((post.reprint_info.reprint_to != undefined)) { %>
-                        <% post.reprint_info.reprint_to.forEach(function (reprint_to, index) { %>
-                        <% if (user.name == reprint_to.name) { %>
-                        <% flag = 0 %>
-                        <% } %>
-                        <% }) %>
-                        <% } %>
+                    <div class="pull-left" style="margin-left: 20px">作者：<a
+                                href="/users/<%= post.name %>"><%= post.name %></a> |
+                        日期：<%= post.time.minute %> |
+                        点击量：<%= post.pv ? post.pv : "0" %> | 转载：
+                        <% if (post.reprint_info.reprint_to) { %>
+                        <%= post.reprint_info.reprint_to.length %>
                         <% } else { %>
-                        <% flag = 0 %>
-                        <% } %>
-                        <% if (flag) { %>
-                        <a class="edit btn btn-primary btn-sm" href="/reprint/<%= post._id %>">转载</a>
+                        <%= 0 %>
                         <% } %>
                     </div>
-                </form>
+                </div>
+                <div class="panel-body"><%- post.post %></div>
+                <div class="panel-footer clearfix">
+
+                    <form action="/remove" target="_blank" method="post">
+                        <div class="btn-group pull-right ">
+                            <% if (user && (user.name == post.name)) { %>
+                            <a class="edit btn btn-primary btn-sm" href="/edit/<%= post._id %>">编辑</a>
+                            <input type="hidden" name="id" value="<%= post._id %>">
+                            <input class=" btn btn-primary btn-sm" name="" type="submit" value="删除" onClick="delcfm()">
+
+                            <% } %>
+                            <% var flag = 1 %>
+                            <% if (user && (user.name != post.name)) { %>
+                            <% if ((post.reprint_info.reprint_from != undefined) && (user.name == post.reprint_info.reprint_from.name)) { %>
+                            <% flag = 0 %>
+                            <% } %>
+                            <% if ((post.reprint_info.reprint_to != undefined)) { %>
+                            <% post.reprint_info.reprint_to.forEach(function (reprint_to, index) { %>
+                            <% if (user.name == reprint_to.name) { %>
+                            <% flag = 0 %>
+                            <% } %>
+                            <% }) %>
+                            <% } %>
+                            <% } else { %>
+                            <% flag = 0 %>
+                            <% } %>
+                            <% if (flag) { %>
+                            <a class="edit btn btn-primary btn-sm" href="/reprint/<%= post._id %>">转载</a>
+                            <% } %>
+                        </div>
+                    </form>
 
 
+                </div>
             </div>
-        </div>
-        <% }) %>
+            <% }) %>
             <% include pageing %>
         </div>
-        <div class="col-md-4 col-sm-4 clearfix" > </div>
+        <div id="user_right" class="col-md-4 col-sm-4 clearfix">
+            <div id="user_info">
+                <div class="user_head">
+                    <div class="user_head_portrait"><img src="/images/head_portrait_default.png"><span
+                                class="head_name"><%= user.name %>
+                            <% if(user.name != other_user.name) {%>
+                            <a class="attention" href="/users/attention/<%= other_user.name %>">关注</a>
+                            <% }%>
+                        </span>
+                    </div>
+                    <div class="user_message">
+                        <ul>
+                            <li>广播<br><%= other_user.article_number ?other_user.article_number : 0 %></li>
+                            <li>关注<br><%= user.attention?user.attention.length:0 %></li>
+                            <li>被关注<br><%= user.by_attention?user.by_attention.length:0 %></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
+</div>
 
-
-    <% include bottom %>
+<% include bottom %>
 </div>
 </body>
 </html>
