--- a/views/top.ejs
+++ b/views/top.ejs
@@ -68,16 +68,17 @@
                     <button type="reset" class="btn btn-primary">重置</button>
                 </div>
             </form>
-            <div id="uploadImg">xixi</div>
+            <div id="uploadImg">点击或者拖拽上传</div>
             <script>
-                $("#uploadImg").dropzone({
+                $("div#uploadImg").dropzone({
                     url: "/post/img",
                     method: "post",
                     addRemoveLinks: true,
                     acceptedFiles: 'image/*',
                     init: function () {
                         this.on('success', function (file, info) {
-                            $(".login_form").append("<input name=img type='text' value="+info.url+">");
+                            $(".login_form").append("<input name=img type='hidden' value='"+info+"'>");
+                            console.log(info);
                         });
                     }
                 });
